--- a/memorivise/templates/biology.html
+++ b/memorivise/templates/biology.html
@@ -33,6 +33,26 @@
                     </div>
                 </div>
 
+                <div class="word">
+                    <h3>2020<br>
+                        Japan
+                    </h3>
+                    <div class="content">
+                        <h3> Theory Exam-1 </h3>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 1.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 1 - Answer key.pdf">Solutions</a>
+                        <h3>Theory Exam-2</h3>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 2.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 2 - Answer key.pdf">Solutions</a>
+                        <h3> Practical Exam-1 (Animal Physiology) </h3>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 1 Exam (Animal Physiology).pdf">Problems</a>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 1 Exam (Animal Physiology) - Answer key.pdf">Solutions</a>
+                        <h3> Practical Exam-2( Bioinformatics) </h3>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 2 Exam (Bioinformatics).pdf">Problems</a>
+                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 2 Exam (Bioinformatics) - Allocation point.pdf">Solutions</a>
+                    </div>
+                </div>
+
                 </div>
         </div>
     </div>
