--- a/memorivise/templates/biology.html
+++ b/memorivise/templates/biology.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biology Olympiad</title>
-</head>
+</head> -->
+{% extends 'base.html' %} {% block title%}
+<title>Biology Olympiad</title>
+{% endblock title%} {% block body %}
 <body>
     <div class="container">
+        <header>
+            <h1 class="text-center">IBO Problems and Solutions</h1>
+          </header>
+          <hr />
         <div class="row">
-            <header class="col-12">
-                <h1>IBO Problems and Solutions</h1><br>
-            </header>
             <div class="word-container">
                 <div class="word">
                     <h3>2020<br>
@@ -34,22 +38,112 @@
                 </div>
 
                 <div class="word">
-                    <h3>2020<br>
-                        Japan
+                    <h3>2019<br>
+                        Hungary
+                    </h3>
+                    <div class="content">
+                        
+                    </div>
+                </div>
+
+                <div class="word">
+                    <h3>2018<br>
+                        Iran
                     </h3>
                     <div class="content">
                         <h3> Theory Exam-1 </h3>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 1.pdf">Problems</a>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 1 - Answer key.pdf">Solutions</a>
+                        <a href="..\static\document\Biology\2018\IBO 2018 Theoretical exam 1.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2018\IBO 2018_Theoretical exams 1 and 2_Answer key.pdf">Solutions</a>
                         <h3>Theory Exam-2</h3>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 2.pdf">Problems</a>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Theory Exam 2 - Answer key.pdf">Solutions</a>
-                        <h3> Practical Exam-1 (Animal Physiology) </h3>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 1 Exam (Animal Physiology).pdf">Problems</a>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 1 Exam (Animal Physiology) - Answer key.pdf">Solutions</a>
-                        <h3> Practical Exam-2( Bioinformatics) </h3>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 2 Exam (Bioinformatics).pdf">Problems</a>
-                        <a href="..\static\document\Biology\2020\IBO 2020_Practical 2 Exam (Bioinformatics) - Allocation point.pdf">Solutions</a>
+                        <a href="..\static\document\Biology\2018\IBO 2018 Theoretical exam 2.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2018\IBO 2018_Theoretical exams 1 and 2_Answer keys.pdf">Solutions</a>
+                        <h3> Practical Exam-1 (Animal Systematics, Anatomy and Physiology) </h3>
+                        <a href="..\static\document\Biology\2018\IBO 2018_Practical Exam_Animal Systematics, Anatomy and Physiology.pdf">Problems</a>
+                        <a href="#">Solutions</a>
+                        <h3> Practical Exam-2( Biochemistry and Molecular Biology) </h3>
+                        <a href="..\static\document\Biology\2018\IBO 2018_Practical Exam_Biochemistry and Molecular Biology.pdf">Problems</a>
+                        <a href="#">Solutions</a>
+                        <h3> Practical Exam-3( Plant Systematics, Anatomy and Physiology) </h3>
+                        <a href="..\static\document\Biology\2018\IBO 2018_Practical Exam_Plant Systematics, Anatomy and Physiology.pdf">Problems</a>
+                        <a href="#">Solutions</a>
+                        <h3> Practical Exam-4(Evolution, Ecology and Behaviour) </h3>
+                        <a href="..\static\document\Biology\2018\IBO 2018_Pratical Exam_Evolution, Ecology and Behaviour.pdf">Problems</a>
+                        <a href="#">Solutions</a>
+                    </div>
+                </div>
+
+                <div class="word">
+                    <h3>2017<br>
+                        United Kingdom
+                    </h3>
+                    <div class="content">
+                        <h3> Theory Exam-1 </h3>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Theoretical Exam A.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Theoretical Exam A_Solutions.pdf">Solutions</a>
+                        <h3>Theory Exam-2</h3>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Theoretical Exam B.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Theoretical Exam B_Solutions.pdf">Solutions</a>
+                        <h3> Practical Exam-1 (Botany) </h3>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Practical Exam 1_Botany.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Practical Exam 1_Botany Solutions.pdf">Solutions</a>
+                        <h3> Practical Exam-2( Biochemistry) </h3>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Practical Exam 2_Biochemistry.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Practical Exam 2_Biochemistry Solutions.pdf">Solutions</a>
+                        <h3> Practical Exam-3( Developmental Physiology) </h3>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Practical Exam 3_Developmental Physiology.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2017\IBO 2017_Practical Exam 3_Developmental Physiology Solutions.pdf">Solutions</a>
+                    </div>
+                </div>
+
+                <div class="word">
+                    <h3>2016<br>
+                        Vietnam
+                    </h3>
+                    <div class="content">
+                        <h3> Theory Exam-1 </h3>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Theoretical Exam A.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Theoretical Exam A_Solutions.pdf">Solutions</a>
+                        <h3>Theory Exam-2</h3>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Theoretical Exam B.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Theoretical Exam B_Solutions.pdf">Solutions</a>
+                        <h3> Practical Exam-1 (Plant Anatomy and Physiology) </h3>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 1_Plant Anatomy and Physiology.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 1_Plant Anatomy and Physiology.pdf">Solutions</a>
+                        <h3> Practical Exam-2( Animal Systematics and Anatomy) </h3>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 2_Animal Systematics and Anatomy.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 2_Animal Systematics and Anatomy.pdf">Solutions</a>
+                        <h3> Practical Exam-3( Biochemistry and Microbiology) </h3>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 3_Biochemistry and Microbiology.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 3_Biochemistry and Microbiology.pdf">Solutions</a>
+                        <h3> Practical Exam-4( Molecular Biology) </h3>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 4_Molecular Biology.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2016\IBO 2016_Practical Exam 4_Molecular Biology.pdf">Solutions</a>
+                    </div>
+                </div>
+
+                <div class="word">
+                    <h3>2015<br>
+                        Denmark
+                    </h3>
+                    <div class="content">
+                        <h3> Theory Exam-1 </h3>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Theoretical Exam A.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Theoretical Exam A_Solutions.pdf">Solutions</a>
+                        <h3>Theory Exam-2</h3>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Theoretical Exam B.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Theoretical Exam B_Solutions.pdf">Solutions</a>
+                        <h3> Practical Exam-1 (Plant Anatomy, Biosystematics, Evolution) </h3>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 1_Plant Anatomy Biosystematics Evolution.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 1_Plant Anatomy Biosystematics Evolution.pdf">Solutions</a>
+                        <h3> Practical Exam-2( Molecular Biology) </h3>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 2_Molecular Biology.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 2_Molecular Biology.pdf">Solutions</a>
+                        <h3> Practical Exam-3( Animal Biology) </h3>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 3_Animal Biology.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 3_Animal Biology.pdf">Solutions</a>
+                        <h3> Practical Exam-4( Biochemistry) </h3>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 4_Biochemistry.pdf">Problems</a>
+                        <a href="..\static\document\Biology\2015\IBO 2015_Practical Exam 4_Biochemistry.pdf">Solutions</a>
                     </div>
                 </div>
 
@@ -58,23 +152,6 @@
     </div>
 </body>
 <style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    h1 {
-        text-align: center;
-        margin-top: 20px;
-    }
-
-    header {
-        border: 1px solid black;
-        height: 100px;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
     .word-container {
         display: flex;
         flex-wrap: wrap;
@@ -139,4 +216,5 @@
     });
 
 </script>
-</html>
+{% endblock body %}
+<!-- </html> -->
